<resources>
    <string name="app_name">آزر</string>
    <string name="welcoming">مرحباً بكم في منصه آزر</string>
    <string name="employer">Employer</string>
    <string name="worker_poster">Worker Poster</string>
    <string name="sign_in">Sign In</string>
    <string name="newAccAr">حساب جديد؟</string>
    <string name="haveAccAr">لديك حساب؟</string>
    <string name="loginAr">تسجيل الدخول</string>
    <string name="employerAr">باحث عن عامل</string>
    <string name="workerPosAr">عارض العمال</string>
    <string name="Search02">🔍Search</string>
    <string name="listAllWorkers">List All Workers</string>
    <string name="RegisterAr">التسجيل</string>
    <string name="ListAllWorkersAr">عرض جميع العمال</string>
    <string name="searchAr">🔍 بحث</string>
    <string name="CooseCityAr">اختر مدينة:</string>
    <string name="PeriodAr">اختر المدة:</string>
    <string name="selectSkillAr">اختر المهارات اللازمة:</string>
    <string name="cityIcon">📍</string>
    <string name="priceFormat">.00SR per H</string>
    <string name="HireAr">وظف</string>
    <string name="chatAr">تحدث مع العارض</string>
    <string name="sendReqAr">ارسل طلب</string>
    <string name="startDateAr">تاريخ البداية</string>
    <string name="endDate">تاريخ الناه</string>
    <string name="endDateAr">تاريخ النهاية</string>
    <string name="feedbackAr">تقييم المستخدمين</string>
    <string name="chatWithAdminAr">تحدث الى المشرف</string>
    <string name="viewContAr">عرض العقود</string>
    <string name="searchForWorkerAr">ابحث عن عامل</string>
    <string name="Block">احظر الحساب</string>
    <string name="check">تحقق من الوثائق</string>
</resources>
