<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RequestActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView15"
        android:layout_width="340dp"
        android:layout_height="30dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/startDateAr"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.147" />

    <EditText
        android:id="@+id/startDate"
        android:layout_width="340dp"
        android:layout_height="62dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="8dp"
        android:background="#E2DFDF"
        android:editable="false"
        android:hint="@string/startDateAr"
        android:padding="15dp"
        android:textColor="#4D4C4C"
        android:textColorHint="#3A3838"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="340dp"
        android:layout_height="30dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/endDateAr"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.147" />

    <EditText
        android:id="@+id/endDate"
        android:layout_width="340dp"
        android:layout_height="62dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="8dp"
        android:background="#E2DFDF"
        android:editable="false"
        android:hint="@string/endDateAr"
        android:padding="15dp"
        android:textColor="#4D4C4C"
        android:textColorHint="#3A3838"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/sendRequst"
        android:layout_width="340dp"
        android:layout_height="62dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="25dp"
        android:background="@color/colorPrimary"
        android:text="@string/sendReqAr"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="405dp" />

</LinearLayout>